# talk2data

./: CLAUDE.md  GENERIC_SQL_IMPLEMENTATION.md  LLM_MIGRATION_SUMMARY.md  QUICK_START_LLM.md  README.md  data_description.md  flow.mermaid  flow.py  flow2.mermaid  flow_backend.py  flow_frontend.py  generic_sql_update.md  intent_detection_optimisation.md  llm_config.yaml  pyproject.toml  scenario_detector.py  scenarios.json  scenarios_new.json  scenarios_v_min1.json  test_generic_sql_display.py  test_llm_migration.py  test_message_history_integrity.py
backlog/: robo.md  save_question_for_backlog.md
backlog/intent_classification/: classifier.md  main_idea.md  pipeline_approaches.md
bckp/: node_classifier_bckp.py
datasets/marco/: scenarios.json
llms/: basic_agent.py  llm_clients.py  structured_output.py
nodes/: __init__.py  node_adding_scenario.py  node_answering.py  node_clarification.py  node_classifier.py  node_classifier_scenario_injection.py  node_confirmation.py  node_generic_sql.py  node_low_certainty.py  node_parameter_extraction.py  node_sql.py
skeleton_codes/: databricks_data_agent.py  databricks_multifiles.md  sketch_search_tfidf.py
skeleton_codes/llms/: basic_agent.py  llm_clients.py  llm_config.yaml  llm_test.py
tmp_scripts/: run_sql.py
