[project]
name = "talk2data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "google-genai>=1.45.0",
    "groq>=0.33.0",
    "langchain-core>=1.0.0",
    "langgraph>=1.0.0",
    "litellm>=1.78.5",
    "openai>=2.5.0",
    "pandas>=2.3.3",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
]
